# obstacle_velocity_planner

./: CMakeLists.txt  README.md  main.cpp
include/: SBoundary.h  csc_matrix_conv.h  matplotlibcpp.h  osqp_interface.h  velocity_optimizer.h  velocity_smoother.h
include/interpolation/: interpolation_utils.h  linear_interpolation.h  spline_interpolation.h
src/: csc_matrix_conv.cpp  osqp_interface.cpp  velocity_optimizer.cpp  velocity_smoother.cpp
src/interpolation/: linear_interpolation.cpp  spline_interpolation.cpp
